--- a/ScrollRocket/index.css
+++ b/ScrollRocket/index.css
@@ -25,7 +25,7 @@
     ) 
 }
 
-h1{
+.title{
     color: #fff;
     padding-top: 50px;
     font-family: 'Roboto',  sans-serif;
@@ -89,4 +89,14 @@ h1{
     opacity: 0;
     top:100vh;
     left: 10vh
+}
+
+.end{
+    position: absolute;
+    opacity: 0;
+    top: 80vh;
+    left: 110vh;
+    color: #fff;
+    font-family: 'Roboto',  sans-serif;
+    font-size: 4rem;
 }
