--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: radial-gradient(rgb(128, 2, 186),#333333);
+    background: radial-gradient(rgba(0, 119, 181, 1),#333333);
 }
 
 .title{
@@ -46,17 +46,29 @@
 
 .card_1{
     left:42%;
-    top:50%;
+    top:35%;
 }
 
 .card_2{
     left:10%;
-    top:50%;
+    top:35%;
 }
 
 .card_3{
     left:75%;
-    top:50%;
+    top:35%;
+}
+
+.card_4{
+    width: 230px;
+    left: 25%;
+    top: 70%;
+}
+
+.card_5{
+    width: 230px;
+    left: 58%;
+    top: 70%;
 }
 
 @media (max-width: 600px){
@@ -65,20 +77,32 @@
         height: 100px;
         font-size: 0.8em;
     }
+
+    .title{
+        margin-top: -160%;
+    }
     
     .card_1{
         
         left:26%;
-        top:55%;
+        top:45%;
     }
     
     .card_2{
         left:26%;
-        top:40%;
+        top:30%;
     }
     
     .card_3{
         left:26%;
-        top:70%;
+        top:60%;
+    }
+    .card_4{
+        left:22%;
+        top:75%;
+    }
+    .card_5{
+        left:22%;
+        top:90%;
     }
 }
