--- a/ScrollTrigger/css/example2.css
+++ b/ScrollTrigger/css/example2.css
@@ -1,9 +1,3 @@
-/* Import Fonts */
-@font-face {
-    font-family: 'Roboto';
-    src: url('../fonts/Roboto/Roboto-Regular.ttf');
-}
-/* Import Fonts */
 
 *{
     margin:0;
@@ -12,13 +6,30 @@
 }
 
 .title{
-    color: #333333;
-    font-family: 'Robot', sans-serif;
+    color: #323232;
+    font-family: 'Roboto', sans-serif;
     font-size: 3em;
     text-align: center;
     margin-top: 20px;
 }
 
+.btn{
+    width: 100px;
+    height: 60px;
+    border-radius: 10px;
+    color: #fff;
+    background:#323232;
+    position: relative;
+}
+
+.inicio{
+    margin-top: -3%;
+    margin-left: 85%;
+}
+.p{
+    font-family:'Roboto', sans-serif;
+    font-size: 1.5em;
+}
 .contenedor__tiutlo--principal{
     width: 100%;
     height: 100px;
