--- a/ScrollTrigger/css/example2.css
+++ b/ScrollTrigger/css/example2.css
@@ -5,8 +5,12 @@
     box-sizing: border-box;
 }
 
+.container{
+    background: radial-gradient(rgba(0, 119, 181, 1),#333333);
+}
+
 .title{
-    color: #323232;
+    color: #fff;
     font-family: 'Roboto', sans-serif;
     font-size: 3em;
     text-align: center;
@@ -42,7 +46,6 @@
 .contenedor__imagenes{
     width: 100%;
     height: 1000px;
-    background-color: #fff;
     position: relative;
 }
 
