--- a/ScrollTrigger/css/example2.css
+++ b/ScrollTrigger/css/example2.css
@@ -20,8 +20,7 @@
 .btn{
     width: 100px;
     height: 60px;
-    border-radius: 10px;
-    color: #fff;
+    border-radius: 10px;    
     background:#323232;
     position: relative;
 }
@@ -31,6 +30,8 @@
     margin-left: 85%;
 }
 .p{
+    color: #fff;
+    text-align: center;
     font-family:'Roboto', sans-serif;
     font-size: 1.3em;
 }
